# capture-the-flag

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/commands/: learning-assistant.md  peer-review.md  update-readme.md
.devcontainer/: Dockerfile  devcontainer.json
capture_the_flag/: __init__.py  batch_runner.py  board.py  breachability.py  combat.py  game_logging.py  game_runner.py  game_ui.py  game_view.py  match.py  moves.py  outcome.py  pieces.py  placement.py  placement_file.py  player.py  ply.py  position.py  pvp_runner.py  reachability.py  record.py  rendering.py  side.py  transitions.py
capture_the_flag/engines/: __init__.py
capture_the_flag/engines/neural_network/: __init__.py  ai_ctf_player.py  ctf_crn.py  ctf_engine_factory.py  ctf_nn_evaluator.py  ctf_policy_target.py  ctf_position_factory.py  ctf_self_play.py  ctf_training.py  neural_ctf_player.py  tensor_layout.py  train.py
doc/: game-engine-core-requirements.md  general-vocabulary.md
doc/guidelines/: implementation-plan-guide.md
doc/neuralnetwork/: README.md  eng-nn-1.md
doc/plan/00000001-create-rules-document/: story.md
doc/plan/00000003-story-buildout/: story.md
doc/plan/00000004-core-game-engine-and-random-play-runner/: implementation-plan.md  peer-review.md  story.md
doc/plan/00000005-text-ui-and-pvp-runner/: implementation-plan.md  peer-review.md  story.md
doc/plan/00000006-simple-heuristic-engine/: story.md
doc/plan/00000007-main-ai-engine/: story.md
doc/ruleset/: CLAUDE.md  changelog.md  rules.md  technical-notes.md
tests/: test_batch_runner.py  test_board.py  test_combat.py  test_game_logging.py  test_game_runner.py  test_game_ui.py  test_game_view.py  test_human_player.py  test_moves.py  test_outcome.py  test_pieces.py  test_placement.py  test_placement_file.py  test_player.py  test_pvp_runner.py  test_record.py  test_rendering.py  test_smoke.py  test_transitions.py
(+32 files in other folders)
